# sk83rjo.sh

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Makefile  index.html  index.js  index.wasm  index.wasm.map  package-lock.json  package.json  shell.html
assets/models/: muro.mtl
assets/shaders/: basic.frag  basic.vert
lib/: CMakeLists.txt  tiny_obj_loader.h
scripts/: main.js
src/: main.cpp
src/Engine/: Camera.cpp  Camera.h  Math.h  ShaderProgram.cpp  ShaderProgram.h  Window.cpp  Window.h
src/Engine/Render/: Material.h  MaterialInstance.cpp  MaterialInstance.h  Mesh.h  MeshInstance.cpp  MeshInstance.h  Texture.h
src/Utils/: MeshLoader.cpp  MeshLoader.h  Singleton.h
styles/: style.css
